--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <html>
     <head>
-<title>Computex2022 AMD</title>
+<title>Computex2022 A</title>
 
-
-
-
+<link rel="stylesheet" href="style.css">
 
     </head>
+
+    <body>
+        <h1>COMPUTEX 2022</h1>
+        <h2>AMD apresenta tecnologias na COMPUTEX 2022 </h1>
+        <p>Na COMPUTEX 2022, a AMD apresentou suas mais recentes inovações em tecnologia de computação para aprimorar a experiência de computação de alto desempenho. A presidente e CEO da AMD, Dra. Lisa Su, apresentou os novos processadores desktop Ryzen™ Série 7000 com a nova arquitetura “Zen 4”, que devem oferecer um aumento significativo no desempenho após o lançamento no segundo semestre de 2022.</p>
+
+    </body>
 
 
 </html>
