--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <main> 
         <div class="logo">
-        <img src="logo.png" alt="Logo" width="500" height="400">
+        <img src="logo.png" alt="Logo" width="700" height="400">
          </div>
 
         <h1 class="titulo1">COMPUTEX 2022</h1>
@@ -20,8 +20,12 @@
         
         <iframe
         src="https://www.youtube.com/embed/U5mCsC4NYLE?start=6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay: clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-        <iframe>
+        </iframe>
+
+        <h3 class="titulo3">CARDS</h3>
+
         </main>
+
     </body>
 
 
