alteração de titulo e logo

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <body>
         <main> 
         <div class="logo">
-        <img src="logo.png" alt="Logo" width="700" height="400">
+        <img src="logo.png" alt="Logo" width="600" height="350">
          </div>
 
         <h1 class="titulo1">COMPUTEX 2022</h1>
-        <h2 class="titulo2">AMD apresenta tecnologias na COMPUTEX 2022 </h1>
-        <p class="texto1">a AMD apresentou suas mais recentes inovações em tecnologia de computação para aprimorar a experiência de computação de alto desempenho. A presidente e CEO da AMD, Dra. Lisa Su, apresentou os novos processadores desktop Ryzen™ Série 7000 com a nova arquitetura “Zen 4”, que devem oferecer um aumento significativo no desempenho após o lançamento no segundo semestre de 2022.</p>
+        <h2 class="titulo2">AMD apresenta novas tecnologias </h1>
+        <p class="texto1">a AMD apresentou na computex 2022 suas mais recentes inovações em tecnologia de computação para aprimorar a experiência de computação de alto desempenho. A presidente e CEO da AMD, Dra. Lisa Su, apresentou os novos processadores desktop Ryzen™ Série 7000 com a nova arquitetura “Zen 4”, que devem oferecer um aumento significativo no desempenho após o lançamento no segundo semestre de 2022.</p>
         <p class="texto2">Continuando a expandir a inovação e o desempenho de liderança dos Processadores Desktop Ryzen Série 5000, os novos Processadores Desktop Ryzen Série 7000 são baseados na arquitetura extremamente eficiente “Zen 4” de 5 nm. Os novos processadores dobrarão a quantidade de cache L2 por núcleo, apresentarão velocidades de clock mais altas e foram projetados para fornecer mais de 15% de aumento no desempenho de thread único em relação à geração anterior para uma experiência inigualável de PC desktop, Durante a apresentação, um Processador Desktop Ryzen Série 7000 de pré-produção foi demonstrado rodando a uma velocidade de clock de 5,5 GHz durante todo o jogo AAA. O mesmo processador também foi demonstrado com desempenho acima de 30% mais rápido que um Intel Core i9 12900K em uma carga de trabalho de renderização multithread do Blender. </p> <br><br><br>
 
         
