--- a/index.html
+++ b/index.html
@@ -27,7 +27,22 @@
         </iframe>
         
         <br>
-        <h3 class="titulo3">CARDS</h3>
+        <h3 class="titulo3">MAIS</h3> <br>
+
+        <div class="row">
+            <div class="Card1">
+                <h2>Configurações</h2> 
+                <p>Configure o sistema</p>    
+            </div>
+            <div class="Card2">
+                <h2>Suporte</h2> 
+                <p>contacte-nos</p>    
+            </div>
+            <div class="Card3">
+                <h2>mais noticias</h2> 
+                <p>noticias sobre tecnologia</p>    
+            </div>
+        </div>
 
         </main>
 
