Alteração dos cards

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
                 <p>Configure o sistema</p>    
             </div>
             <div class="Card2">
-                <h2>Suporte</h2> 
-                <p>contacte-nos</p>    
+                <h2>noticias</h2> 
+                <p>noticias</p>    
             </div>
             <div class="Card3">
-                <h2>mais noticias</h2> 
-                <p>noticias sobre tecnologia</p>    
+                <h2>Suporte</h2> 
+                <p>contacte-nos</p>    
             </div>
         </div>
 
