--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <main>
 
         <div class="logo">
-        <img src="logo.png" alt="Logo" width="600" height="350">
+        <img src="logo.png" alt="Logo" width=55% %>
          </div>
 
         <h1 class="titulo1">COMPUTEX 2022</h1>
